# CMakeLearning

./: DuoTai.cpp  LICENSE  background.txt
Case_1/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  Print.cpp  Print.h  cmake_install.cmake  main
Case_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  single_cpp  single_cpp.cpp
Case_3/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  cmake_install.cmake
Case_3/lib/: CMakeLists.txt  Makefile  Print.h  add.h  cmake_install.cmake
Case_4/: CMakeLists.txt
Case_4/lib/: CMakeLists.txt  Print.cpp  add.cpp  lib.h
Case_4/src/: CMakeLists.txt  Main.cpp  global.h
编译过程/: HelloWorld.cpp  HelloWorld.i  HelloWorld.s
